--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.0' # use your flutter version
+          channel: 'stable' # use your flutter version
       - run: flutter pub get
       - run: flutter build web --release
       - uses: peaceiris/actions-gh-pages@v3
